--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -4,5 +4,7 @@ $light-brown: #f1e8d9;
 $brown: #d7c094;
 $orange: #ce822f;
 $beige: #d7c094;
+$black: #000000;
+$white: #ffffff;
 
 $dm: 'DM Serif Display', serif;
