--- a/sass/components/_info-block.scss
+++ b/sass/components/_info-block.scss
@@ -23,6 +23,10 @@
     position: relative;
     border-radius: 0px 329px 329px 0px;
     overflow: hidden;
+
+    img {
+      object-fit: cover;
+    }
   }
 
   &__headline {
