Stryle the HighlightArcticle component

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,7 @@
 @import 'components/button';
 @import 'components/hero-section';
 @import 'components/info-block';
+
+@import 'components/blog/highlight-article';
+
+@import 'pages/blog';
