Add the Newsletter bloc (just static)

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,5 +10,6 @@
 @import 'components/info-block';
 
 @import 'components/blog/highlight-article';
+@import 'components/blog/newsletter';
 
 @import 'pages/blog';
