Add custom style for input elements

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import 'components/button';
 @import 'components/hero-section';
 @import 'components/info-block';
+@import 'components/input';
 
 @import 'components/blog/highlight-article';
 @import 'components/blog/newsletter';
