Style the article-overview (and other stuff)

--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -18,7 +18,7 @@
       height: 100%;
       object-fit: cover;
       object-position: center bottom;
-      border-radius: 0px 0px 80px 80px;
+      border-radius: 0px 0px 8rem 8rem;
     }
   }
 
