Generic article component

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -6,6 +6,7 @@ $brown: #d7c094;
 $orange: #ce822f;
 $beige: #d7c094;
 $black: #000000;
+$dark-grey: #686868;
 $white: #ffffff;
 $link-color: #0041e8;
 
