Style the blog-preview

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import 'components/hero-section';
 @import 'components/info-block';
 @import 'components/featured-items';
+@import 'components/blog-preview';
 @import 'components/input';
 
 @import 'components/blog/highlight-article';
