--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -11,6 +11,16 @@ h1 {
   font-size: 10rem;
   line-height: 12rem;
   font-weight: 500;
+
+  @include respond-to(md) {
+    font-size: 5rem;
+    line-height: 7rem;
+  }
+
+  @include respond-to(sm) {
+    font-size: 3rem;
+    line-height: 4rem;
+  }
 }
 
 h2 {
