--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -1,5 +1,5 @@
 // MEDIA QUERY MANAGER
-@mixin respond-to($breakpoint) {
+@mixin respond($breakpoint) {
   @if $breakpoint == xs {
     @media (max-width: #{$breakpoint-xs}) {
       @content;
