--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -13,28 +13,41 @@ h1 {
   font-weight: 500;
 
   @include respond(md) {
-    font-size: 5rem;
+    font-size: 6.5rem;
     line-height: 7rem;
   }
 
   @include respond(sm) {
-    font-size: 3rem;
+    font-size: 5.5rem;
     line-height: 4rem;
   }
 }
 
 h2 {
   font-size: 8rem;
+  line-height: 9rem;
+  @include respond(sm) {
+    font-size: 5rem;
+    line-height: 5rem;
+  }
 }
 
 h3 {
   font-size: 6rem;
   line-height: 7rem;
+  @include respond(sm) {
+    font-size: 4rem;
+    line-height: 5rem;
+  }
 }
 
 h4 {
   font-size: 4rem;
   line-height: 4.7rem;
+  @include respond(sm) {
+    font-size: 3rem;
+    line-height: 3.2rem;
+  }
 }
 
 h5 {
