Header responsive menu

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -70,3 +70,11 @@ html {
   font-size: 1.6rem;
   margin-top: 1.6rem;
 }
+
+.hide-on {
+  &-lg {
+    @include respond(lg) {
+      display: none;
+    }
+  }
+}
