--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,18 +1,42 @@
 .header {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 2rem 4.8rem;
   z-index: 10;
+
+  &-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem 4.8rem;
+    position: relative;
+    background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.6) 0%,
+      rgba(255, 255, 255, 0.3) 70%,
+      rgba(255, 255, 255, 0) 100%
+    );
+
+    @include respond(sm) {
+      padding: 2rem;
+    }
+  }
 
   &--light {
     color: white;
 
-    & .header__logo {
+    & .header-content {
+      background: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.6) 0%,
+        rgba(0, 0, 0, 0.3) 70%,
+        rgba(0, 0, 0, 0) 100%
+      );
+    }
+
+    & .header__logo,
+    & .header__mobile-menu {
       filter: invert(99%) sepia(3%) saturate(825%) hue-rotate(200deg)
         brightness(118%) contrast(100%);
     }
@@ -30,8 +54,66 @@
     list-style: none;
     font-family: $dm;
 
+    @include respond(lg) {
+      display: none;
+    }
+
     &-item {
       font-weight: 100;
+    }
+  }
+
+  // MOBILE NAV
+  &__mobile {
+    &-menu {
+      display: none;
+      @include respond(lg) {
+        display: block;
+        position: relative;
+        width: 4rem;
+        height: 4rem;
+        cursor: pointer;
+      }
+    }
+
+    &-nav {
+      display: none;
+      color: $black !important;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+        rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+      border-top-left-radius: 2rem;
+      border-bottom-left-radius: 2rem;
+      border-bottom-right-radius: 2rem;
+
+      @include respond(lg) {
+        &.open {
+          display: flex;
+        }
+        position: absolute;
+        top: 100%;
+        right: 4.8rem;
+        width: 80%;
+        flex-direction: column;
+        gap: 8rem;
+        padding: 4rem;
+        background-color: $white;
+      }
+      @include respond(sm) {
+        right: 0;
+        padding: 3rem 2.5rem;
+        width: calc(100% - 2rem);
+      }
+
+      &__list {
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+      }
+
+      &-btn {
+        margin-top: 2rem;
+      }
     }
   }
 }
