--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,8 +1,29 @@
 .footer {
+  display: flex;
+  flex-direction: column;
+  gap: 3.5rem;
   margin-top: 10rem;
-  background-color: black;
-  color: white;
+  background-color: $black;
+  color: $white;
   padding: 6rem 4.8rem 4.5rem;
+  @include respond(lg) {
+    gap: 6rem;
+  }
+  @include respond(md) {
+    gap: 3.5rem;
+    padding: 4rem 2rem 3rem;
+  }
+
+  &__nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10rem;
+    @include respond(sm) {
+      gap: 3rem;
+      flex-direction: column;
+    }
+  }
 
   &__logo {
     position: relative;
@@ -15,23 +36,31 @@
     }
   }
 
-  &__nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-right: 6rem;
-    margin-bottom: 3.5rem;
-  }
-
   &__links {
     display: flex;
     gap: 6.3rem;
     list-style: none;
+    @include respond(lg) {
+      width: calc(100% - 18rem);
+      gap: 3rem;
+      justify-content: flex-end;
+    }
+    @include respond(sm) {
+      gap: 2rem;
+      width: 100%;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+    }
   }
 
   &__policies {
     display: flex;
     justify-content: space-between;
+    gap: 4rem;
+    @include respond(lg) {
+      gap: 2rem;
+      flex-direction: column;
+    }
   }
 
   &__policies-nav {
