--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,6 +4,7 @@
   left: 0;
   right: 0;
   z-index: 10;
+  width: 100vw;
 
   &-content {
     display: flex;
@@ -99,9 +100,9 @@
         background-color: $white;
       }
       @include respond(sm) {
-        right: 1.5rem;
+        right: 2rem;
         padding: 3rem 2rem;
-        width: calc(100% - 3rem);
+        width: calc(100% - 4rem);
       }
 
       &__list {
