--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -11,15 +11,17 @@ h1 {
   font-size: 10rem;
   line-height: 12rem;
   font-weight: 500;
-
+  @include respond(lg) {
+    font-size: 8rem;
+    line-height: 8.5rem;
+  }
   @include respond(md) {
     font-size: 6.5rem;
     line-height: 7rem;
   }
-
   @include respond(sm) {
     font-size: 5.5rem;
-    line-height: 4rem;
+    line-height: 6rem;
   }
 }
 
