--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -4,6 +4,14 @@
   height: 83rem;
   padding: 22rem 4.8rem 0;
   margin-bottom: 12.5rem;
+  @include respond(lg) {
+    padding: 14rem 4.8rem 6rem;
+    height: auto;
+  }
+  @include respond(sm) {
+    padding: 14rem 2rem 6rem;
+    margin-bottom: 6.5rem;
+  }
 
   &__background {
     position: absolute;
@@ -19,6 +27,9 @@
       object-fit: cover;
       object-position: center bottom;
       border-radius: 0px 0px 8rem 8rem;
+      @include respond(sm) {
+        border-radius: 0px 0px 4rem 4rem;
+      }
     }
   }
 
@@ -40,6 +51,14 @@
     bottom: 0;
     left: 50%;
     transform: translate(-50%, 50%);
+    @include respond(lg) {
+      width: 8rem;
+      bottom: 0.7rem;
+      z-index: -1;
+    }
+    @include respond(sm) {
+      width: 5rem;
+    }
 
     &--orange {
       filter: invert(62%) sepia(21%) saturate(1646%) hue-rotate(348deg)
