--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,14 +1,24 @@
 .btn {
   font-size: 2rem;
+  @include respond(md) {
+    font-size: 1.5rem;
+  }
 
   &--small {
     padding: 1rem 2.5rem;
     border-radius: 2.5rem;
+    @include respond(md) {
+      padding: 1rem 1.8rem;
+      font-size: 1.3rem;
+    }
   }
 
   &--medium {
     padding: 1.6rem 3.2rem;
     border-radius: 3.2rem;
+    @include respond(md) {
+      padding: 1.4rem 2rem;
+    }
   }
 
   &--black {
