--- a/sass/components/_blog-preview.scss
+++ b/sass/components/_blog-preview.scss
@@ -5,9 +5,17 @@
   margin-top: 10.5rem;
   margin-bottom: 12rem;
   padding: 0 4.8rem;
+  @include respond(sm) {
+    padding: 0 2rem;
+    margin-top: 6.5rem;
+    margin-bottom: 4rem;
+  }
 
   &__headline {
     margin-bottom: 8rem;
+    @include respond(sm) {
+      margin-bottom: 4rem;
+    }
   }
 
   &__container {
@@ -15,36 +23,56 @@
     flex-wrap: wrap;
     column-gap: 6%;
     row-gap: 6rem;
+    @include respond(sm) {
+      flex-direction: column;
+      gap: 4rem;
+    }
   }
 
   &__item {
     &:nth-of-type(1) {
       width: 60.5%;
+      @include respond(sm) {
+        width: 100%;
+      }
     }
 
     &:nth-of-type(2) {
       width: 33.5%;
+      @include respond(sm) {
+        width: 100%;
+      }
     }
 
     &:nth-of-type(3),
     &:nth-of-type(4) {
       width: 47%;
+      @include respond(sm) {
+        width: 100%;
+      }
     }
   }
 
   &__image {
     height: 36rem;
     width: 100%;
+    border-radius: 4rem;
+    overflow: hidden;
+    @include respond(sm) {
+      height: 20rem;
+    }
 
     & img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      border-radius: 4rem;
     }
   }
 
   &__title {
     margin: 2.4rem 0 1rem;
+    @include respond(sm) {
+      margin: 1rem 0 1rem;
+    }
   }
 }
