--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -11,6 +11,12 @@
   }
   @include respond(md) {
     gap: 3.5rem;
+    margin-top: 8rem;
+    padding: 4rem 4.8rem 3rem;
+  }
+  @include respond(sm) {
+    gap: 3.5rem;
+    margin-top: 6rem;
     padding: 4rem 2rem 3rem;
   }
 
