--- a/sass/components/blog/_newsletter.scss
+++ b/sass/components/blog/_newsletter.scss
@@ -1,20 +1,33 @@
 .newsletter {
   display: flex;
+  gap: 3rem;
   background-color: $light-brown;
   padding: 3.8rem 2.1rem 3.8rem 4.8rem;
   border-radius: 3.35rem;
   margin-bottom: 10rem;
+  @include respond(xl) {
+    flex-direction: column;
+    padding: 3.8rem 4.8rem;
+  }
+  @include respond(sm) {
+    padding: 3rem 2rem;
+  }
 
   &__info {
     & h4 {
       margin-bottom: 2.3rem;
+      @include respond(xl) {
+        margin-bottom: 0.8rem;
+      }
     }
   }
 
   &__form {
     display: flex;
     align-items: center;
-    margin-left: 3rem;
+    @include respond(sm) {
+      flex-direction: column;
+    }
   }
 
   &__input {
@@ -23,9 +36,26 @@
     height: 6.4rem;
     border-radius: 1.8rem 0px 0px 1.8rem;
     padding-left: 2.1rem;
+    @include respond(xl) {
+      width: calc(100% - 24rem);
+    }
+    @include respond(md) {
+      width: calc(100% - 20rem);
+    }
+    @include respond(sm) {
+      font-size: 1.6rem;
+      width: 100%;
+      height: 5rem;
+      border-radius: 2rem 2rem 0 0;
+    }
 
     &:focus {
       outline: $brown solid 2px;
+    }
+    &::placeholder {
+      @include respond(sm) {
+        font-size: 1.6rem;
+      }
     }
   }
 
@@ -34,6 +64,18 @@
     height: 6.4rem;
     width: 23rem;
     border-radius: 0px 1.8rem 1.8rem 0px;
+    @include respond(xl) {
+      width: 24rem;
+    }
+    @include respond(md) {
+      width: 20rem;
+    }
+    @include respond(sm) {
+      width: 100%;
+      height: 4rem;
+      font-size: 1.3rem;
+      border-radius: 0 0 2rem 2rem;
+    }
 
     &:focus {
       outline: $dark-turquoise solid 2px;
