--- a/sass/components/blog/_highlight-article.scss
+++ b/sass/components/blog/_highlight-article.scss
@@ -4,20 +4,41 @@
   align-items: stretch;
   width: 100%;
   margin-bottom: 10rem;
+  @include respond(md) {
+    margin-bottom: 8rem;
+  }
+  @include respond(sm) {
+    margin-bottom: 5rem;
+    flex-direction: column-reverse;
+  }
+
+  &__info,
+  &__image {
+    width: 49%;
+    @include respond(sm) {
+      width: 100%;
+    }
+  }
 
   &__info {
-    width: 49%;
-
     & .copy {
       margin-top: 4rem;
       margin-bottom: 3rem;
+      @include respond(sm) {
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
+      }
     }
   }
 
   &__image {
     position: relative;
-    width: 49%;
     height: auto;
     border-radius: 2rem;
+    object-fit: cover;
+    @include respond(sm) {
+      height: 20rem;
+      margin-bottom: 1.5rem;
+    }
   }
 }
