--- a/sass/pages/_blog.scss
+++ b/sass/pages/_blog.scss
@@ -1,9 +1,16 @@
 .blog-page,
 .events-page {
-  padding: 20rem 4.8rem 12rem;
+  padding: 20rem 4.8rem 6rem;
+  @include respond(sm) {
+    padding: 12rem 2rem 0;
+  }
 }
 
 .article-section {
   padding: 0 4.8rem;
   margin-bottom: 12rem;
+  @include respond(sm) {
+    padding: 0 2rem;
+    margin-bottom: 6rem;
+  }
 }
