--- a/sass/pages/_blog.scss
+++ b/sass/pages/_blog.scss
@@ -1,6 +1,9 @@
 .blog-page,
 .events-page {
   padding: 20rem 4.8rem 6rem;
+  @include respond(md) {
+    padding: 15rem 4.8rem 3rem;
+  }
   @include respond(sm) {
     padding: 12rem 2rem 0;
   }
