--- a/sass/components/blog/_article-intro.scss
+++ b/sass/components/blog/_article-intro.scss
@@ -1,6 +1,17 @@
 .article-intro {
   padding: 35rem 4.8rem 0;
   height: 83rem;
+  position: relative;
+  overflow: hidden;
+  border-radius: 0 0 8rem 8rem;
+  @include respond(xl) {
+    padding: 12rem 4.8rem 6rem;
+    height: auto;
+  }
+  @include respond(sm) {
+    padding: 12rem 2rem 6rem;
+    border-radius: 0 0 4rem 4rem;
+  }
 
   &__background {
     position: absolute;
@@ -15,12 +26,17 @@
       height: 100%;
       object-fit: cover;
       object-position: center bottom;
-      border-radius: 0 0 8rem 8rem;
     }
   }
 
   &__headline {
     width: 59rem;
     margin-bottom: 2.4rem;
+    @include respond(md) {
+      width: calc(100% - 4rem);
+    }
+    @include respond(sm) {
+      width: 100%;
+    }
   }
 }
