--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 3.5rem;
-  margin-top: 10rem;
+  // margin-top: 10rem;
   background-color: $black;
   color: $white;
   padding: 6rem 4.8rem 4.5rem;
@@ -11,12 +11,12 @@
   }
   @include respond(md) {
     gap: 3.5rem;
-    margin-top: 8rem;
+    // margin-top: 8rem;
     padding: 4rem 4.8rem 3rem;
   }
   @include respond(sm) {
     gap: 3.5rem;
-    margin-top: 6rem;
+    // margin-top: 6rem;
     padding: 4rem 2rem 3rem;
   }
 
